# VRMusicStand

./: .gitignore  Cargo.toml  readme.md
assets/: readme.md
assets/shaders/: blinker.hlsl.sks  hud.hlsl.sks  hud_text.hlsl.sks
src/: a_stepper.rs  lib.rs  main.rs  make_pdf.rs
