[package]
name = "stereokit_rust_template"
version = "0.1.0"
edition = "2021"
description = "My stereokit VR program"
keywords = ["stereokit", "XR", "VR", "AR", "sys"]
license = "MIT"
repository = "https://github.com/mvvvv/StereoKit-template"
readme = "README.md"

[features]
default = ["build-dynamic-openxr"]
dynamic-openxr = []                       # Add openxr_loader.so in Android APK
build-dynamic-openxr = ["dynamic-openxr"] # Build openxr_loader from Khronos OpenXR project

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
stereokit-rust = { path = "../stereokit-rust"} #, features = ["build-dynamic-openxr"] }
winit = { version = "0.30", features = [ "android-native-activity" ] }

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
android_logger = "0.13"
#android-activity = { version = "0.6", features = [ "native-activity" ] }
ndk-context = "0.1.1"
ndk = "0.9.0"

[package.metadata.android]
package ="com.stereokit.rust_binding_template"
apk_label = "Stereokit-rust-template"
assets = "./assets"
resources ="./res"
fullscreen = true
runtime_libs = "./target/runtime_libs"   #---the way to build and add Khronos libopenxr_loader.so for feature build-dynamic-openxr
#runtime_libs = "./quest_lib"            #---the way to add existing libopenxr_loader.so for feature dynamic-openxr

[package.metadata.android.sdk]
min_sdk_version = 29
target_sdk_version = 29
max_sdk_version = 32


[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true

[[package.metadata.android.uses_feature]]
name = "oculus.software.handtracking"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.body_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.face_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.eye_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "com.oculus.experimental.enabled"
required = false

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

[[package.metadata.android.uses_permission]]
name = "android.permission.CAPTURE_AUDIO_OUTPUT"

[[package.metadata.android.uses_permission]]
name = "android.permission.MODIFY_AUDIO_SETTINGS"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.HAND_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.BODY_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.FACE_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.EYE_TRACKING"
required = false

[package.metadata.android.application]
debuggable = true
label = "Stereokit-rust-template"
icon = "@mipmap/app_icon"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
extract_native_libs = true
has_code = false


[[package.metadata.android.application.meta_data]]
name = "com.oculus.handtracking.version"
value = "V2.0"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.ossplash"
value = "true"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.supportedDevices"
value = "quest2|questpro|quest3"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.intent.category.VR"
value = "vr_only"

[package.metadata.android.application.activity]
#name = ".MainActivity"
theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = false


[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]

[[package.metadata.android.application.activity.meta_data]]
name = "com.oculus.vr.focusaware"
value = "true"



